Added method for creating project resource in ucode cluster
