# api/api.go
@@ -221,6 +221,7 @@ func SetUpAPI(r *gin.Engine, h handlers.Handler, cfg config.Config) {
 		v1.DELETE("/company-project/:project_id", h.DeleteCompanyProject)
 
 		v1.POST("/company/project/resource", h.AddProjectResource)
+		v1.POST("/company/project/ucode-resource", h.AddProjectResourceInUcodeCluster)
 		v1.DELETE("/company/project/resource", h.RemoveProjectResource)
 		v1.GET("/company/project/resource/:resource_id", h.GetResource)
 		v1.GET("/company/project/resource", h.GetResourceList)
